Fix social icons on small screens

--- a/templates/style.css
+++ b/templates/style.css
@@ -441,6 +441,12 @@ footer p {
     margin-top: 30px;
     margin-bottom: 30px;
   }
+  .contact-us-social li i {
+    height: 20px;
+  }  
+  .social-footer li i {
+    height: 20px;
+  }
 }
   @media screen and (max-width: 500px) {
     .content-wrap {
